# tremor-language-server

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  RELEASE_PROCESS.md  build.rs  deny.toml
.github/: dependabot.yml
.github/scripts/: bump.sh
.github/workflows/: checks.yaml  create-release.yaml  depandabot-auto-merge.yaml  draft-new-release.yaml  licenses.yaml  osx.yaml  publish-crates.yaml  release.yml  security.yaml  tests.yml
src/: backend.rs  language.rs  lsp_utils.rs  main.rs
src/backend/: mod.rs  tremor.rs  trickle.rs
src/language/: deploy.rs  mod.rs  prelude.rs  query.rs  script.rs
tests/: test.tremor  test.trickle  test.troy  warning_class.tremor
wix/: main.wxs
