[package]
authors = ["The Tremor Team"]
description = "Tremor Language Server (Trill)"
edition = "2021"
license = "Apache-2.0"
name = "tremor-language-server"
version = "0.12.2"

[dependencies]

clap = "3.2"

halfbrown = "0.1"
serde_json = "1.0.81"
# this version of tokio is needed for compatibility with tower-lsp currently
tokio = { version = "1.17", features = [
    "io-util",
    "io-std",
    "macros",
    "rt-multi-thread",
] }
tower-lsp = "0.17"

tremor-script = { version = "0.12.2", features = [
    "arena-delete",
    "allow-non-simd",
] }
