[package]
authors = ["The Tremor Team"]
description = "Tremor Language Server (Trill)"
edition = "2021"
license = "Apache-2.0"
name = "tremor-language-server"
version = "0.13.0-rc.18"

[dependencies]

clap = "4.5"

halfbrown = "0.2"
serde_json = "1.0.96"
# this version of tokio is needed for compatibility with tower-lsp currently
async-std = { version = "1.12", features = ["unstable", "attributes"] }
tower-lsp = { version = "0.19", default-features = false, features = [
    "runtime-agnostic",
] }

tremor-script = { version="0.13.0-rc.18", features = [
    "arena-delete",
] }
tracing-subscriber="0.3.16"

[dev-dependencies]
tower-test = "0.4.0"
tower = "0.4"
