[package]
authors = ["The Tremor Team"]
description = "Tremor Language Server (Trill)"
edition = "2021"
license = "Apache-2.0"
name = "tremor-language-server"
version = "0.13.0-rc.18"
repository = "https://github.com/tremor-rs/tremor-language-server"
homepage = "https://www.tremor.rs/"

[package.metadata.wix]
upgrade-guid = "FA519E0C-89F7-40F8-8038-07289454143F"
path-guid = "98BBF6C8-51D7-4817-B9E4-D58EB32DD118"
license = false
eula = false

[dependencies]

clap = "4.5"

halfbrown = "0.2"
serde_json = "1.0.96"
# this version of tokio is needed for compatibility with tower-lsp currently
async-std = { version = "1.12", features = ["unstable", "attributes"] }
tower-lsp = { version = "0.19", default-features = false, features = [
    "runtime-agnostic",
] }

tremor-script = { version="0.13.0-rc.18", features = [
    "arena-delete",
] }
tracing-subscriber="0.3.16"

[dev-dependencies]
tower-test = "0.4.0"
tower = "0.4"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew", "msi"]
# A GitHub repo to push Homebrew formulas to
tap = "tremor-rs/homebrew-formulae"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = true
